Closes #81 - INTEGRATION DE jwt ET securisation des routes du model Eleves
